--- a/SqlAnalyzer/Views/Forms/MainWindow.xaml
+++ b/SqlAnalyzer/Views/Forms/MainWindow.xaml
@@ -7,13 +7,13 @@
     xmlns:vm ="clr-namespace:SqlAnalyzer.ViewModels"
         xmlns:local1="clr-namespace:SqlAnalyzer.Views" x:Class="SqlAnalyzer.Views.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Анализ SQL" Height="450" Width="800">
     <Window.DataContext>
         <vm:MainWindowViewModel/>
     </Window.DataContext>
     <Grid>
 
-        <local1:ConnectionStringsView HorizontalAlignment="Left" Height="277" Margin="125,57,0,0" VerticalAlignment="Top" Width="525"/>
+        <local1:ConnectionStringsView Visibility="Hidden" HorizontalAlignment="Left" Height="277" Margin="125,57,0,0" VerticalAlignment="Top" Width="525"/>
         <Button Content="Изучить колонки сервера" HorizontalAlignment="Left" 
                 Margin="10,10,0,0" VerticalAlignment="Top" Width="300"
                 Command="{Binding SearchColumnsCommand}"/>
